--- a/client_code/Mainpage/Modal_wide/form_template.yaml
+++ b/client_code/Mainpage/Modal_wide/form_template.yaml
@@ -64,11 +64,14 @@ components:
       name: label_5
       layout_properties: {row: JKJKTK, width_xs: 2, col_xs: 0, width: 75.4844}
     - type: Label
-      properties: {}
+      properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
+        visible: true, text: '', font_size: 18, font: '', spacing_above: small, icon_align: left,
+        spacing_below: small, italic: false, background: '', bold: false, underline: false,
+        icon: ''}
       name: label_6
-      layout_properties: {row: JKJKTK, width_xs: 2, col_xs: 1}
+      layout_properties: {row: JKJKTK, width_xs: 2, col_xs: 1, width: 76.7812}
       data_bindings:
-      - {property: text, code: 'self.item[''job_status''][''name'']'}
+      - {property: icon, code: 'self.item[''job_status''][''icon'']'}
     - type: Label
       properties: {role: null, align: right, tooltip: '', border: '', foreground: 'theme:Filter
           Font', visible: true, text: 'Escalation Status :', font_size: 14, font: '',
@@ -77,11 +80,14 @@ components:
       name: label_13
       layout_properties: {row: JKJKTK, width_xs: 2, col_xs: 3, width: 76.1406}
     - type: Label
-      properties: {}
+      properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
+        visible: true, text: '', font_size: 18, font: '', spacing_above: small, icon_align: left,
+        spacing_below: small, italic: false, background: '', bold: false, underline: false,
+        icon: ''}
       name: label_14
-      layout_properties: {row: JKJKTK, width_xs: 2, col_xs: 4}
+      layout_properties: {row: JKJKTK, width_xs: 2, col_xs: 4, width: 76.7812}
       data_bindings:
-      - {property: text, code: 'self.item[''latest_status''][''name'']'}
+      - {property: icon, code: 'self.item[''latest_status''][''icon'']'}
     - type: Label
       properties: {role: null, align: right, tooltip: '', border: '', foreground: 'theme:Filter
           Font', visible: true, text: 'Job Report :', font_size: 14, font: '', spacing_above: small,
