--- a/client_code/Mainpage/Mainpage/RowTemplate1/form_template.yaml
+++ b/client_code/Mainpage/Mainpage/RowTemplate1/form_template.yaml
@@ -64,13 +64,13 @@ components:
     layout_properties: {grid_position: 'FNFUHH,KXTXNW'}
   - type: Button
     properties: {role: null, align: center, tooltip: '', border: '', enabled: true,
-      foreground: '', visible: true, text: '', font_size: null, font: '', spacing_above: small,
+      foreground: '', visible: false, text: '', font_size: null, font: '', spacing_above: small,
       icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
       underline: false, icon: ''}
     name: button_1
     layout_properties: {grid_position: 'FNFUHH,IXEBZG'}
     event_bindings: {click: widecomment_click}
-  event_bindings: {click: comment_click}
+  event_bindings: {click: widecomment_click}
 - type: Image
   properties: {role: null, vertical_align: center, height: 29, tooltip: '', border: '',
     foreground: '', visible: true, display_mode: original_size, spacing_above: small,
