--- a/client_code/Mainpage/Modal_wide/RowTemplate2/form_template.yaml
+++ b/client_code/Mainpage/Modal_wide/RowTemplate2/form_template.yaml
@@ -35,7 +35,7 @@ components:
   name: outlined_card_1
   layout_properties: {column: null}
 - type: Image
-  properties: {role: null, vertical_align: center, height: 28, tooltip: '', border: '',
+  properties: {role: null, vertical_align: center, height: '25', tooltip: '', border: '',
     foreground: '', visible: true, display_mode: shrink_to_fit, spacing_above: small,
     source: '', spacing_below: small, background: '', horizontal_align: left}
   name: image_1
