Created Mainpage.Mainpage.RowTemplate3; Edited Mainpage.Mainpage

--- a/.anvil_editor.yaml
+++ b/.anvil_editor.yaml
@@ -4,6 +4,7 @@ unique_ids:
     Mainpage.Mainpage.ItemTemplate1: '1687332081139740291484546.4254'
     Mainpage.Modal_wide: '1689574363975929302088613.0068'
     Homepage: VY3XQF7XYCO43UXCOG4EM42WVI2XP64Q
+    Mainpage.Mainpage.RowTemplate3: '1689900355149253905217204.78644'
     Mainpage.Modal_wide.RowTemplate2: '1689575363220319688708390.78265'
     Mainpage.Mainpage.RowTemplate1: '1687139172855366975840770.57874'
     Mainpage.Modal.Actionlog: '1687327361440489905191294.7403'
