--- a/client_code/Mainpage/Mainpage/form_template.yaml
+++ b/client_code/Mainpage/Mainpage/form_template.yaml
@@ -38,7 +38,7 @@ components:
       foreground: '', visible: true, text: log out, font_size: null, font: '', spacing_above: small,
       icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
       underline: false, icon: ''}
-    layout_properties: {grid_position: 'HWESZE,STEZAR', row: DEXPXX, width_xs: 3,
+    layout_properties: {grid_position: 'HWESZE,STEZAR', row: VRWBLX, width_xs: 3,
       col_xs: 9}
     event_bindings: {click: log_out_click}
     name: log_out
