--- a/client_code/Homepage/form_template.yaml
+++ b/client_code/Homepage/form_template.yaml
@@ -3,12 +3,24 @@ container:
   type: HtmlTemplate
   properties: {html: '@theme:standard-page.html'}
 components:
-- type: ColumnPanel
-  properties: {col_widths: '{}'}
-  name: content_panel
-  layout_properties: {slot: default}
-  components: []
 - type: FlowPanel
   properties: {}
   name: navbar_links
   layout_properties: {slot: nav-right}
+- type: ColumnPanel
+  properties: {role: outlined-card}
+  name: outlined_card_1
+  layout_properties: {slot: left-nav}
+- type: ColumnPanel
+  properties: {col_widths: '{}'}
+  name: filter_panel
+  layout_properties: {slot: default}
+  components:
+  - type: DropDown
+    properties: {}
+    name: drop_down_1
+    layout_properties: {grid_position: 'GYYBYX,MZSVVB'}
+  - type: DropDown
+    properties: {}
+    name: drop_down_2
+    layout_properties: {grid_position: 'GYYBYX,JEQPOG'}
